--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,27 @@
     max-width: 80%;
 }
 
+/*.question-container {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+} */
+
+/* .question-container h2 {
+    font-weight: bold;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+} */
+
 .btn-grid {
     display: grid;
     grid-template-columns: repeat(2, auto);
